<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tVAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/amount"
        android:textColor="@color/pink_700" />

    <EditText
        android:id="@+id/lblAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:inputType="numberDecimal"
        android:text="@string/initialValue"
        android:selectAllOnFocus="true"
        android:textAlignment="textEnd"
        android:imeOptions="actionDone"
        android:maxLength="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/from_currency"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/FRadioButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/FDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/dollar"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/FEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/euro" />

        <RadioButton
            android:enabled="false"
            android:id="@+id/FPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/pound"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <ImageView
            android:id="@+id/FCurrencyImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/ic_euro"
            android:contentDescription="@string/currencyimage" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/to_currency"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/TRadioButtom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <RadioButton
            android:enabled="false"
            android:id="@+id/TDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/dollar" />

        <RadioButton
            android:id="@+id/TEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/TPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:checked="true"
            android:text="@string/pound" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/TCurrencyImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/ic_dollar"
            android:contentDescription="@string/currencyimage" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/app_name" />
</LinearLayout>